Update TripService.java
Added note for future programmers to know why after deleting a trip the next new trip does not fill the spot of the deleted trip.